--- a/style.css
+++ b/style.css
@@ -1,14 +1,23 @@
 body{
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
 }
 
 video{
-    margin:auto;
     width: 500px;
     height: 500px;
 
+    display: none;
+}
+
+h1{
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+img{
+    height: 100vh;
     position: relative;
-    top:100vh;
-    left: 100vw;
+    top:0;
+    left: 0;
 }
