teleport to multiple locations on list

--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,10 @@ img{
     top:0;
     left: 0;
 }
+
+.panolens-container{
+    display: none;
+}
+.panolens-container#selected{
+    display: block;
+}
